# backend/internal/models/question_package.go
@@ -8,8 +8,8 @@ type QuestionPackage struct {
 	Description string                 `gorm:"size:500" json:"description"`
 	SubjectID   uint                   `gorm:"not null;default:0;index" json:"subject_id"`
 	IsFree      bool                   `gorm:"default:true;not null" json:"is_free"`
-	GroupID     *uint                  `gorm:"index" json:"group_id,omitempty"`
-	Questions   []QuestionbankQuestion `gorm:"foreignKey:PackageID" json:"questions"`
-	Subject     Subject                `gorm:"foreignKey:SubjectID" json:"-"`
-	Group       QuestionPackageGroup   `gorm:"foreignKey:GroupID" json:"-"`
+	CollectionID *uint                   `gorm:"index" json:"collection_id,omitempty"`
+	Questions    []QuestionbankQuestion  `gorm:"foreignKey:PackageID" json:"questions"`
+	Subject      Subject                 `gorm:"foreignKey:SubjectID" json:"-"`
+	Collection   QuestionPackageCollection `gorm:"foreignKey:CollectionID" json:"-"`
 }
